--- a/Noob-Stuff/HTML-Prac/index.html
+++ b/Noob-Stuff/HTML-Prac/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>This is my intro to HTML !</h1>
-    <p>This is a paragraph.</p>
+    <p>This is a paragraph. This is the new part .</p>
 </body>
 </html>
