Created a new web page which uses DOM manipulation using js.

--- a/Week-4/index.html
+++ b/Week-4/index.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function populateDiv(){
+            // console.log("Button Clicked !")
+            const a = document.querySelector("#firstNumber").value;
+            const b = document.querySelector("#secondNumber").value;
+            const c = parseInt(a) + parseInt(b);
+            const divText = document.querySelector("#finalSum");
+            divText.innerHTML = `The sum is  : ${c}`;
+        }
+    </script>
 </head>
 <body>
     
-    <input type = "text" placeholder="First Number" >
+    <input id = "firstNumber" type = "text" placeholder="First Number" >
     <br>
     <br>
-    <input type = "text" placeholder="Second Number" >
+    <input id = "secondNumber" type = "text" placeholder="Second Number" >
     <br>
     <br>
-    <button>Calculate Sum</button>
+    <button onclick="populateDiv()">Calculate Sum</button>
+
+    <div id = "finalSum"></div>
 
 </body>
 </html>
